fix movie form on mobile

--- a/src/features/AdminPanel/Movies/ui/MovieForm/style.module.scss
+++ b/src/features/AdminPanel/Movies/ui/MovieForm/style.module.scss
@@ -40,6 +40,7 @@
     &__tabs {
         display: flex;
         column-gap: rem(10);
+        overflow-x: hidden;
         button {
             width: 100%;
         }
