--- a/src/shared/ui/Popover/ui/style.module.scss
+++ b/src/shared/ui/Popover/ui/style.module.scss
@@ -1,3 +1,7 @@
+.popover {
+    max-width: calc(100vw - var(--container-padding-x) * 2);
+}
+
 .content {
     background-color: var(--theme-color-grey-dark);
     box-shadow: var(--box-shadow-paper);
